--- a/templates/gencoui/rndr_langs.html
+++ b/templates/gencoui/rndr_langs.html
@@ -116,7 +116,7 @@
 				    <div style="margin-bottom: 15px;">
 				    	<img src="{% static 'gencoui/img/rndr/langs.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px"></img>  	
 				    	<h4 style="display:inline;margin-top: 10px;margin-right:10px">Languages </h4>
-				    	<a class="btn icon-btn btn-default" role="button" data-toggle="modal" data-target="#lang-modal" data-placement="bottom" data-tt="tooltip" title="Create Lang" ng-click="new_lang()">
+				    	<a class="btn icon-btn btn-default" role="button" data-toggle="modal" data-placement="bottom" data-tt="tooltip" title="Create Lang" ng-click="new_lang()">
 							<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
 						</a>
 				    </div>	
@@ -136,30 +136,30 @@
 			    			{% verbatim %}
 					      	<div class="panel-body" ng-if="language_selected.nombre!=null">
 					      		
-												<h3>{{ language_selected.nombre }}</h3>
-
+												<h3 style="display:inline">{{ language_selected.nombre }}</h3>
+												<a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-target="#type-add-modal" data-placement="bottom" data-tt="tooltip" title="Add Type" ng-click="new_type(lang.id_lenguaje)">
+													<!-- <span class="glyphicon btn-glyphicon glyphicon-plus" ></span> -->
+													+ Datatype			
+												</a>			
 												<table class="table-bordered render-table" style="margin-top: 20px; width:90%">
 												  	
 												  		
 												  		<thead>
-												  			<th colspan="2" style="min-width: 250px; background-color: #ECF0F1"><span>Datatypes </span>  
-												  				<a class="btn icon-btn btn-default" role="button" data-toggle="modal" data-target="#type-add-modal" data-placement="bottom" data-tt="tooltip" title="Add Type" ng-click="new_type(lang.id_lenguaje)">
-																	<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
-																</a>	
+												  			<th style="min-width: 250px; background-color: #ffffff"><span>Genco</span>
 												  			</th>
-												  			<th style="background-color: #58646f; min-width: 300px;">
-												  				<span style="color:white;">Conversion to </span>
-								   							    <select id="repeatSelect" ng-model="data.repeatSelect" ng-change="getTypesCombos(lang.id_lenguaje)">
+												  			<th style="background-color: #ECF0F1; min-width: 300px;">
+												  				<span>{{language_selected.nombre}}</span>
+								   							    <!-- <select id="repeatSelect" ng-model="data.repeatSelect" ng-change="getTypesCombos(lang.id_lenguaje)">
 															      	<option ng-repeat="option in data.availableOptions" value="{{option.id_lenguaje}}">{{ option.nombre }}</option>
-															    </select>
+															    </select> -->
 															     <!-- <tt>repeatSelect = {{data.repeatSelect}}</tt><br/> -->
-															    <div style="display:inline; margin-left:15px;">
+															    <div style="display:inline; float:right">
 																    <a class="btn icon-btn btn-default" ng-click="save_conversion(lang.id_lenguaje)" data-placement="bottom"data-tt="tooltip" title="Save">
 																		<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
 																	</a>
-																	<a class="btn icon-btn btn-default"  ng-click="print()" data-placement="bottom"data-tt="tooltip" title="Undo">
+																	<!-- <a class="btn icon-btn btn-default"  ng-click="print()" data-placement="bottom"data-tt="tooltip" title="Undo">
 																		<span class="glyphicon btn-glyphicon glyphicon-refresh img-circle" ></span>					
-																	</a>
+																	</a> -->
 															    </div> 
 
 												  			</th>
@@ -168,8 +168,8 @@
 												  		<tbody >	
 												  			<!-- item in <code>{{ types | json }}</code> -->
 															<tr  ng-repeat="type in types">
-													      		<td>{{ type.nombre}}<sub style="color:#cccccc">{{ type.descripcion}}</sub></td>						      		
-													      		<td width="100px" >
+													      		<td>{{ type.nombre}}<sub style="color:#cccccc">{{type.descripcion}}</sub></td>						      		
+<!-- 													      		<td width="100px" >
 
 													      			<div>
 																		<a class="btn btn-sm" data-toggle="modal" data-target="#type-edit-modal" data-placement="bottom" data-tt="tooltip" title="Edit Type" ng-click="edit_type($index)" style="padding: 6px 2px;">
@@ -180,14 +180,14 @@
 																		</a>
 													      			</div>
 													      			
-																</td>
+																</td> -->
 													      		<td>
 													      			<select  ng-model="Conversions[$index]" ng-change="" ng-options="types_cnv.id_tipodato as types_cnv.nombre for types_cnv in types_types">
 													      			<!-- <select  ng-model="Conversions[$index]" ng-change="" ng-options="type_cnv.nombre for type_cnv in types_types track by type_cnv.id_tipodato ">  -->
 													      				<option value=''>Select</option>
 															      		<!-- <option ng-options=="types_cnv in types_types" value="{{types_cnv.id_tipodato}}">{{ types_cnv.nombre }}</option> -->
 															    	</select>	
-															    	{{Conversions[$index]}}
+															    	<!-- {{Conversions[$index]}} -->
 															    	<!-- <tt>repeatSelect = {{type.id_tipodato}}</tt><br/> -->
 													      		</td>
 													      		<!-- <td width="15px">
@@ -235,12 +235,16 @@
 			</form>
           	</div>
           	<div class="modal-footer">
-          		<a class="btn icon-btn btn-default" ng-click="save_type()" data-placement="bottom"data-tt="tooltip" title="Save">
-					<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
-				</a>
-				<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
-						<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
-				</a>
+          		<div style="display:inline">
+	          		<a class="btn icon-btn btn-default" ng-click="save_type()" data-placement="bottom"data-tt="tooltip" title="Save">
+						<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
+					</a>
+				</div>
+				<div style="display:inline">	
+					<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+					</a>
+				</div>	
           	</div>
 
         </div>
@@ -267,12 +271,16 @@
 				</form>
           	</div>
           	<div class="modal-footer">
-          		<a class="btn icon-btn btn-default" ng-click="update_type()" data-placement="bottom"data-tt="tooltip" title="Save">
-					<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
-				</a>
-				<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
-						<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
-				</a>
+          		<div style="display:inline">
+	          		<a class="btn icon-btn btn-default" ng-click="update_type()" data-placement="bottom"data-tt="tooltip" title="Save">
+						<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
+					</a>
+				</div>
+				<div style="display:inline">	
+					<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+					</a>
+				</div>	
           	</div>
 
         </div>
@@ -291,17 +299,22 @@
 		    </div>
           <!-- <div class="arrow-up"></div> -->
           	<div class="modal-body">
-   
-			{{ form_add_lang }}
-
+          		<form ng-submit="save_lang()">
+          			{{ form_add_lang }}	
+          			<button type="submit" hidden></button>
+          		</form>				
           	</div>
           	<div class="modal-footer">
-          		<a class="btn icon-btn btn-default" ng-click="save_lang()" data-placement="bottom"data-tt="tooltip" title="Save">
-					<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
-				</a>
-				<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
-						<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
-				</a>
+          		<div style="display:inline">
+	          		<a class="btn icon-btn btn-default" ng-click="save_lang()" data-placement="bottom"data-tt="tooltip" title="Save">
+						<span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					
+					</a>
+				</div>	
+				<div style="display:inline">	
+					<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+					</a>
+				</div>	
           	</div>
 
         </div>
