Se esta trabajando en clonacion de lenguajes con conversion

--- a/templates/gencoui/rndr_langs.html
+++ b/templates/gencoui/rndr_langs.html
@@ -241,7 +241,7 @@
 					</a>
 				</div>
 				<div style="display:inline">	
-					<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+					<a class="btn icon-btn btn-default" data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Cancel">
 							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
 					</a>
 				</div>	
@@ -277,7 +277,7 @@
 					</a>
 				</div>
 				<div style="display:inline">	
-					<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+					<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Cancel">
 							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
 					</a>
 				</div>	
@@ -311,7 +311,7 @@
 					</a>
 				</div>	
 				<div style="display:inline">	
-					<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+					<a class="btn icon-btn btn-default" data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Cancel">
 							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
 					</a>
 				</div>	
@@ -414,7 +414,7 @@
 					</a>
 				</div>
 				<div style="display:inline">	
-					<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+					<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Cancel">
 						<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
 					</a>
 				</div>	
@@ -453,7 +453,7 @@
 
         <div class="modal-content" style="padding: 20px;margin: 20px 0;border-left-width: 20px;border-radius: 3px; border-left-color: #ffb612;">
 	        <div class="modal-header">
-		    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+		    	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	        	<h4 class="modal-title">Confirm</h4>
 		    </div>	     
           	<div id="tedmConfirm" class="modal-body">
