Se termina clonacion de lenguajes y se continua con clonacion de repositorios

--- a/templates/gencoui/rndr_langs.html
+++ b/templates/gencoui/rndr_langs.html
@@ -120,7 +120,7 @@
 							<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
 						</a>
 				    </div>	
-				    <a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-target="#lang-clone-modal" data-placement="bottom" data-tt="tooltip" title="Create Lang" ng-click="clone_lang()" style="margin-bottom:20px">Clone Lang</a>
+				    <a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-target="#lang-clone-modal" data-placement="bottom" data-tt="tooltip" title="Create Lang" style="margin-bottom:20px">Clone Lang</a>
 				    <div id="jstree"></div>
 
 				</div>       
