--- a/templates/gencoui/rndr_repository.html
+++ b/templates/gencoui/rndr_repository.html
@@ -120,7 +120,7 @@
 				            </a>
 	    				</div> -->
 
-					    <div style="display:inline; margin-bottom: 50px; ">				    	
+					    <div style="margin-bottom: 15px; ">				    	
 							<img src="{% static 'gencoui/img/rndr/repository.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px"></img>
 					    	<h4 style="display:inline;margin-top: 10px;margin-right:10px">Metadata </h4>
 							<a class="btn icon-btn btn-default" role="button" data-toggle="modal" data-placement="bottom" data-tt="tooltip" title="Add Repository" ng-click="new_repository()">
@@ -128,7 +128,7 @@
 							</a>
 								<!-- <a style="left:250px" class="action-button shadow animate blue" data-toggle="modal" data-target="#repository-add-modal" data-placement="bottom" data-tt="tooltip" title="Add Repository" ng-click="new_repository()"><span class="glyphicon glyphicon-plus" ></span></a> -->
 					    </div>	
-
+					    <a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-target="#repo-clone-modal" data-placement="bottom" data-tt="tooltip" title="Create Lang" style="margin-bottom:20px">Clone Repository</a>
 						<div id="jstree" style="margin-top: 20px;"></div>
 				</div>			
 	    	
@@ -462,7 +462,104 @@
     </div>
 </div>
 
-<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal fade" id="repo-clone-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+
+	    <div class="modal-dialog">
+
+	        <div class="modal-content">
+		        <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+			        <h4 class="modal-title">Clone Repository</h4>
+			    </div>
+	          <!-- <div class="arrow-up"></div> -->
+	          	<div class="modal-body">
+	   
+					  	<div class="form-group">		
+		  		<span style="color:#cccccc">
+		  			<i class="glyphicon glyphicon-asterisk"></i>
+		  			for all
+		  		</span>
+
+		  		<form ng-submit="serachRepos()">
+					 	<div class="input-group">
+						    <input id="findRepoKey" type="text" class="form-control" placeholder="Find Repository">
+						    <span class="input-group-btn">
+						      <button class="btn btn-default btn-sm" type="button" ng-click="searchRepos(1)">
+						      	<i class="glyphicon glyphicon-search"></i>
+						      	Search
+						      </button>
+						    </span>			    
+					  	</div>
+			  		<button type="submit" hidden></button>
+				</form>	
+			</div>
+
+			<div>
+				{% verbatim %}
+				<table class="table table-hover" style="color: #6d758c;">
+				  <thead>
+				    <tr>
+				      <th>Name</th>
+				      <!-- <th>Logo</th> -->
+				      <th>Description</th>
+				      <th>Creator</th>
+				      <th></th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				  	
+				    <tr ng-repeat="repof in pageFoundRepos.repos">
+				      <td>{{repof.nombre}}</td>
+				      <!-- <td><img  ng-src="{{langsf.id_icono.upload}}" onerror="this.onerror=null; this.src='../static/gencoui/img/rndr/noimage.jpg'" width="24px" height="24px"/></td> -->
+				      <td>{{repof.descripcion}}</td>
+				      <td>{{repof.user}}</td>
+				      <td>
+						
+						<input type="checkbox" autocomplete="off" ng-click="addToCloneRepos($index)" ng-checked="repof.checked">
+						
+				      </td>			      
+				    </tr>
+				   
+			  	  </tbody>
+				</table> 
+				<div style="text-align:center">
+					<ul class="pagination" ng-if="pageFoundRepos.next >= pageFoundRepos.current" >
+					  <li><a ng-class="{'disabled': pageFoundRepos.next == pageFoundRepos.current}" href="#" ng-click="searchLang(pageFoundRepos.pagerange[0])">&laquo;</a></li>
+
+					  <li ng-class="{'active':npage==pageFoundRepos.current}" ng-repeat="npage in pageFoundRepos.pagerange"><a href="#" ng-click="searchLang(npage)">{{npage}}</a></li>
+
+
+
+					  <li><a ng-class="{'disabled': pageFoundRepos.next == pageFoundRepos.current}" href="#" ng-click="searchLang(pageFoundRepos.pagerange[pageFoundRepos.pagerange.length - 1])">&raquo;</a></li>
+
+					</ul>
+				</div>
+
+				 {% endverbatim %}
+
+			</div>	
+
+
+	          	</div>
+	          	<div class="modal-footer">
+	          		<div style="display:inline; float:left">
+	          			<a class="btn btn-default" ng-click="save_clone_repo()" data-placement="bottom"data-tt="tooltip" title="Clone">Clone
+						<!-- <span class="glyphicon btn-glyphicon glyphicon-floppy-disk img-circle" ></span>					 -->
+						</a>
+					</div>
+					<div style="display:inline">	
+						<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Cancel">
+							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+						</a>
+					</div>	
+	          	</div>
+
+	        </div>
+	    </div>
+	</div>
+
+
+	<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 
     <div class="modal-dialog" >
 
@@ -514,6 +611,7 @@
         </div>
     </div>
 </div>
+
 
 </div>
 
