Se trabaja en los filtros de scope

--- a/templates/gencoui/menu.html
+++ b/templates/gencoui/menu.html
@@ -57,7 +57,7 @@
       <div class="col-md-3">
           <div class"container-fluid">
             <div class="row" style="margin-top:100px">
-              
+              {{request.session.workspace}}
               <!-- <div class="col-xs-1"></div> -->
               <div class="col-xs-12">
                 <div class="panel panel-default" style="border-width:1px; border-color:rgb(164,200,236);box-shadow: 5px 5px 5px #3a3838; margin-bottom:50px">
