Se trabaja con la integracion de share multiusuario

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -10,12 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!-- <link rel="stylesheet" href="{% static 'gencoui/css/bootstrap.min.flatly.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'gencoui/css/bootstrap.min.flatly.css' %}">
     <!-- <link rel="stylesheet" href="{% static 'gencoui/css/bootstrap.min.slate.css' %}"> -->
     <!-- <link rel="stylesheet" href="{% static 'gencoui/css/bootstrap.min.darkly.css' %}"> -->
     <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css"> -->
 
-    <link rel="stylesheet" href="{% static 'gencoui/css/bootstrap.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'gencoui/css/bootstrap.css' %}"> -->
     <!-- <link rel="stylesheet" href="{% static 'gencoui/css/bootflat/css/bootflat.min.css' %}">     -->
     <!-- <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
 
