Se continua integrando los accesos por workspace

--- a/templates/gencoui/rndr_editor.html
+++ b/templates/gencoui/rndr_editor.html
@@ -304,7 +304,7 @@
 
 	        <div class="modal-content">
 		        <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+			        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 			     {% verbatim %}
 		        <h4 class="modal-title">{{component_selected.nombre}} - Template</h4>
 		        {% endverbatim %}
@@ -367,7 +367,7 @@
 						</a>
 					</div>	
 					<div style="display:inline">	
-						<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+						<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Cancel">
 								<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
 						</a>
 					</div>	
@@ -384,7 +384,7 @@
 
 	        <div class="modal-content">
 		        <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+			        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ><span aria-hidden="true">&times;</span></button>
 			        <h4 class="modal-title">Preview Template</h4>
 			    </div>
 	          <!-- <div class="arrow-up"></div> -->
@@ -395,7 +395,7 @@
 	          	</div>
 	          	<div class="modal-footer">	          		
 					<div style="display:inline">	
-						<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+						<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Cancel">
 								<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
 						</a>
 					</div>	
@@ -412,7 +412,7 @@
 
 	        <div class="modal-content">
 		        <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+			        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ><span aria-hidden="true">&times;</span></button>
 		        	<h4 class="modal-title">{{entorno.nombre}} - Component</h4>
 			    </div>
 	          <!-- <div class="arrow-up"></div> -->
@@ -430,7 +430,7 @@
 						</a>
 					</div>
 					<div style="display:inline">	
-						<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+						<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Cancel">
 								<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
 						</a>
 					</div>	
@@ -448,7 +448,7 @@
 
 	        <div class="modal-content">
 		        <div class="modal-header">
-			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		        	<h4 class="modal-title">{{entorno.nombre}} - Component</h4>
 			    </div>
 	          <!-- <div class="arrow-up"></div> -->
@@ -466,7 +466,7 @@
 						</a>
 					</div>
 					<div style="display:inline">
-						<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+						<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Cancel">
 								<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
 						</a>
 					</div>
@@ -483,7 +483,7 @@
 
 	        <div class="modal-content">
 		        <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+			        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 			        <h4 class="modal-title">Clone Component</h4>
 			    </div>
 	          <!-- <div class="arrow-up"></div> -->
@@ -580,7 +580,7 @@
 
 	        <div class="modal-content" style="padding: 20px;margin: 20px 0;border-left-width: 20px;border-radius: 3px; border-left-color: #ce4844;">
 		        <div class="modal-header">
-			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ><span aria-hidden="true">&times;</span></button>
 		        	<h4 class="modal-title">Information</h4>
 			    </div>	     
 	          	<div id="imConfirm" class="modal-body">
@@ -603,7 +603,7 @@
 
 	        <div class="modal-content" style="padding: 20px;margin: 20px 0;border-left-width: 20px;border-radius: 3px; border-left-color: #ffb612;">
 		        <div class="modal-header">
-			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ><span aria-hidden="true">&times;</span></button>
 		        	<h4 class="modal-title">Confirm</h4>
 			    </div>	     
 	          	<div id="tedmConfirm" class="modal-body">
