--- a/templates/gencoui/rndr_repository.html
+++ b/templates/gencoui/rndr_repository.html
@@ -128,7 +128,7 @@
 							</a>
 								<!-- <a style="left:250px" class="action-button shadow animate blue" data-toggle="modal" data-target="#repository-add-modal" data-placement="bottom" data-tt="tooltip" title="Add Repository" ng-click="new_repository()"><span class="glyphicon glyphicon-plus" ></span></a> -->
 					    </div>	
-					    <a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-target="#repo-clone-modal" data-placement="bottom" data-tt="tooltip" title="Create Lang" style="margin-bottom:20px">Clone Repository</a>
+					    <a class="btn btn-default btn-xs" role="button" data-toggle="modal" data-target="#repo-clone-modal" data-placement="bottom" data-tt="tooltip" title="Create Lang" style="margin-bottom:20px">Clone Metadata</a>
 						<div id="jstree" style="margin-top: 20px;"></div>
 				</div>			
 	    	
