--- a/templates/gencoui/rndr_header.html
+++ b/templates/gencoui/rndr_header.html
@@ -18,6 +18,11 @@
                   </button>
                   <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
                     <li><a href="/gencoui">Switch Workspace</a></li>
+                    {% for ws in workspaces %}
+                                            <li >
+                                                <a  href="{{ ws.id_grupo.id_grupo }}"> {{ ws.id_grupo.nombre }} </a>
+                                              </li>
+                    {% endfor %}
                     <li role="separator" class="divider"></li>
                     <li><a href="/login/logout">logout</a></li>
                   </ul>
