--- a/templates/gencoui/rndr_header.html
+++ b/templates/gencoui/rndr_header.html
@@ -17,7 +17,7 @@
                     <span class="glyphicon glyphicon-menu-hamburger" ></span>
                   </button>
                   <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                    <li><a href="/gencoui">Switch Workspace</a></li>
+                    <li>Switch Workspace</li>
                     {% for ws in workspaces %}
                                             <li >
                                                 <a  href="{{ ws.id_grupo.id_grupo }}"> {{ ws.id_grupo.nombre }} </a>
